# bugzilla_mcp

./: .gitignore  README.md  bugzilla.py  bugzilla_api.py  config.py  main.py  pyproject.toml
