[project]
name = "bugzilla-mcp"
version = "0.1.0"
description = "An MCP Server for Bugzilla json rpc api"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.10.1",
    "pip>=25.1.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.0.0",
    "python-bugzilla>=3.3.0",
    "requests>=2.32.4",
]
